后台更改逻辑，重置人脸识别逻辑，备注：依图需要一个分组标识

--- a/src/assets/common/style/mixin.styl
+++ b/src/assets/common/style/mixin.styl
@@ -34,5 +34,22 @@ whb(WIDTH, HEIGHT, URL)
   widthHeight WIDTH, HEIGHT
   bg URL
 
+whpb(WIDTH, HEIGHT, PADDING, URL)
+  whb WIDTH, HEIGHT, URL
+  padding PADDING
+
+whpb_(WIDTH, HEIGHT, PADDING, URL, BGX, BGY, BGXEND, BGYEND)
+  widthHeight WIDTH, HEIGHT
+  padding PADDING
+  background url(URL) BGX BGY / BGXEND BGYEND no-repeat
+
 bg(URL)
   background url(URL) 0 0 / 100% 100% no-repeat
+
+ta(DIRECTION = center)
+  text-align DIRECTION
+
+textoverflow()
+  overflow hidden
+  text-overflow ellipsis
+  white-space nowrap
